--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-vertical-timeline-component": "^3.0.2",
+    "typed.js": "^2.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
